@@ -10,6 +10,12 @@
 
 RELEASE 0.97.X - XXX
 
+  From Mark Bertoglio:
+
+  - Fix listing multiple projects in Visual Studio 7.[01] solution files,
+    including generating individual project GUIDs instead of re-using
+    the solution GUID.
+
   From Jean Brouwers:
 
   - Add /opt/SUNWspro/bin to the default execution PATH on Solaris.
